<resources>
    <string name="app_name">Reader</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="exit_reader">Exit Reader?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="account_info">%1$s Link %2$s Comment</string>
    <string name="action_example">Example action</string>
    <string name="item_search">Search</string>
    <string name="item_interface">Interface</string>
    <string name="item_sort">Sort</string>
    <string name="item_sort_subreddits">Sort</string>
    <string name="item_sort_relevance">Relevancy</string>
    <string name="item_sort_activity">Activity</string>
    <string name="item_sort_subscribers">Subscribers</string>
    <string name="item_sort_alphabetical">Alphabetical</string>
    <string name="item_sort_hot">Hot</string>
    <string name="item_sort_new">New</string>
    <string name="item_sort_rising">Rising</string>
    <string name="item_sort_controversial">Controversial</string>
    <string name="item_sort_top">Top</string>
    <string name="item_sort_gilded">Gilded</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_description_thread_preview">Thread preview image</string>
    <string name="content_description_comments_button">Comment button image</string>
    <string name="content_description_button_upvote">Upvote</string>
    <string name="content_description_button_downvote">Downvote</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="content_description_button_comments">Comments</string>
    <string name="content_description_button_share">Share</string>
    <string name="content_description_button_more">More options</string>
    <string name="content_description_image_navigation">Navigation entry icon</string>
    <string name="content_description_image_navigation_header">Navigation header image</string>
    <string name="content_description_button_collapse">Collapse/expand comment</string>
    <string name="item_upvote">Upvote</string>
    <string name="item_downvote">Downvote</string>
    <string name="item_share">Share</string>
    <string name="load_more_comments">Load more comments…</string>
    <string name="item_web">Load in browser</string>
    <string name="item_reply">Reply</string>
    <string name="button_send">Send</string>
    <string name="item_download_image">Download image</string>
    <string name="empty_thread_list">Error loading subreddit</string>
    <string name="error_loading_links">Error loading links</string>
    <string name="username">Username</string>
    <string name="search_in_page">Search in page</string>
    <string name="content_description_button_open">Open</string>
    <string name="home">Home</string>
    <string name="front_page">Front Page</string>
    <string name="profile">Profile</string>
    <string name="inbox">Inbox</string>
    <string name="settings">Settings</string>
    <string name="add_account">Add Account</string>
    <string name="login">Login</string>
    <string name="subreddit">Subreddit</string>
    <string name="link">Link</string>
    <string name="user">User</string>
    <string name="time">Time</string>
    <string name="item_sort_hour">Hour</string>
    <string name="item_sort_day">Day</string>
    <string name="item_sort_week">Week</string>
    <string name="item_sort_month">Month</string>
    <string name="item_sort_year">Year</string>
    <string name="item_sort_all">All</string>
    <string name="post">Post</string>
    <string name="new_post_title">Title</string>
    <string name="new_post_body">URL or self text</string>
    <string name="new_post">New Post</string>
    <string name="submit_link">New Link</string>
    <string name="submit_text">New Self Post</string>
    <string name="captcha">CAPTCHA</string>
    <string name="captcha_response">CAPTCHA response</string>
    <string name="empty_title">Title cannot be empty</string>
    <string name="invalid_url">Text is not valid URL</string>
    <string name="item_delete">Delete</string>
    <string name="must_be_logged_in">Must be logged in to do that</string>
    <string name="must_be_logged_in_to_vote">Must be logged in to vote</string>
    <string name="must_be_logged_in_to_reply">Must be logged in to reply</string>
    <string name="search_next">Next search result</string>
    <string name="search_previous">Previous search result</string>
    <string name="loading_web_page">Loading web page</string>
    <string name="all">All</string>
    <string name="no_comments">No comments, click again to force load</string>
    <string name="item_jump_to_top">Jump to top</string>
    <string name="item_comment_previous">Previous comment</string>
    <string name="item_comment_next">Next comment</string>
    <string name="item_view_subreddit">View subreddit</string>
    <string name="item_view_profile">View user profile</string>
    <string name="item_view_link">View parent post</string>
    <string name="item_save">Save</string>
    <string name="unsave">Unsave</string>
    <string name="save">Save</string>
    <string name="profile_page_overview">Overview</string>
    <string name="profile_page_submitted">Submitted</string>
    <string name="profile_page_comments">Comments</string>
    <string name="profile_page_upvoted">Upvoted</string>
    <string name="profile_page_downvoted">Downvoted</string>
    <string name="profile_page_hidden">Hidden</string>
    <string name="profile_page_saved">Saved</string>
    <string name="profile_page_gilded">Gilded</string>
    <string name="error_loading">Error loading</string>
    <string name="error_logging_in">Error logging in</string>
    <string name="content_description_button_show_sidebar">Show sidebar</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="item_copy_text">Copy text</string>
    <string name="comment">Comment</string>
    <string name="copied">Copied</string>
    <string name="error_youtube">Error loading YouTube video</string>
    <string name="item_edit">Edit</string>
    <string name="send_reply">Send reply</string>
    <string name="send_edit">Send edit</string>
    <string name="continue_thread">Continue thread</string>
    <string name="item_load_full_comments">Load full comments</string>
    <string name="item_show_post">Show/hide OP</string>
    <string name="item_report">Report</string>
    <string name="item_report_spam">Spam</string>
    <string name="item_report_vote_manipulation">Vote manipulation</string>
    <string name="item_report_personal_information">Personal information</string>
    <string name="item_report_sexualizing_minors">Sexualizing minors</string>
    <string name="item_report_breaking_reddit">Breaking Reddit</string>
    <string name="item_report_other">Other</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="item_open_in_browser">Open in browser</string>
    <string name="error_downloading">Error downloading</string>
    <string name="new_message">new message</string>
    <string name="new_messages">new messages</string>
    <string name="logout">Logout</string>
    <string name="title_activity_activity_new_message">ActivityNewMessage</string>
    <string name="hello_world">Hello world!</string>
    <string name="message_recipient">/u/user or /r/subreddit recipient</string>
    <string name="subject">Subject</string>
    <string name="messsage">Message</string>
    <string name="inbox_page_inbox">Inbox</string>
    <string name="inbox_page_unread">Unread</string>
    <string name="inbox_page_sent">Sent</string>
    <string name="pref_save_history">Save history</string>
    <string name="pref_save_history_summary">Keep track of which links have been viewed</string>
    <string name="pref_clear_history">Clear history</string>
    <string name="pref_dim_posts">Dim posts</string>
    <string name="pref_dim_posts_summary">Darken viewed links</string>
    <string name="item_refresh">Refresh</string>
    <string name="pref_external_browser">Use external browser</string>
    <string name="pref_external_browser_summary">Open links outside of Reader</string>
    <string name="title_activity_activity_settings">ActivitySettings</string>
    <string name="confirm_logout">Logout?</string>
    <string name="url_copied">URL copied to clipboard</string>
    <string name="sidebar_note_mobile">Note that not all sidebar links work on mobile</string>
    <string name="prefs_category_mail_summary">Messages and notifications</string>
    <string name="prefs_category_behavior_summary">How Reader handles certain actions</string>
    <string name="prefs_category_display_summary">Visuals and appearance</string>
    <string name="item_sort_confidence">Best</string>
    <string name="item_sort_old">Old</string>
    <string name="item_sort_random">Random</string>
    <string name="item_sort_qa">Q&amp;A</string>
    <string name="hidden">Hidden</string>
    <string name="error_submitting_post">Error submitting post</string>
    <string name="logout_summary">Remove account from Reader</string>
    <string name="undo">Undo</string>
    <string name="link_hidden">Post hidden</string>
    <string name="pref_privacy_policy">Privacy Policy</string>
    <string name="pref_privacy_policy_summary">View info on collected data</string>
    <string name="error_sending_message">Error sending message</string>
    <string name="error">Error</string>
    <string name="error_voting">Error voting</string>
    <string name="login_success">Login successful</string>
    <string name="login_failure">Login failed</string>
    <string name="image_downloaded">Image downloaded</string>
    <string name="history_cleared">History cleared</string>
    <string name="logged_out">Logged out</string>
    <string name="empty_recipient">Recipient cannot be empty</string>
    <string name="content_description_button_jump_top">Jump to top</string>
    <string name="content_description_button_clear_viewed">Clear viewed posts</string>
    <string name="content_description_button_comment_previous">Previous comment thread</string>
    <string name="content_description_button_comment_next">Next comment thread</string>
    <string name="prefix_admin">[A]</string>
    <string name="prefix_moderator">[M]</string>
    <string name="prefix_special">[&#916;]</string>
    <string name="beta_title">Reader (BETA)</string>
    <string name="beta_notice_0">Please remember that Reader is still in beta. Features are missing
        and there will be bugs. This application was built to be used with an Android Lollipop
        device.\n\nIf you have any suggestions, questions, or bug reports, please email me at\n\n\t
        mail@winsonchiu.com\n\nThank you and please enjoy Reader.
    </string>
    <string name="image_downloading">Downloading image</string>
    <string name="link_shown">Post removed from hidden</string>
    <string name="item_jump_parent">Jump to parent</string>
    <string name="history">History</string>
    <string name="hint_title">Title</string>
    <string name="item_time_range">Time range</string>
    <string name="item_editor_italicize">Italicize</string>
    <string name="item_editor_strikethrough">Strikethrough</string>
    <string name="item_editor_bold">Bold</string>
    <string name="item_editor_quote">Quote</string>
    <string name="item_editor_link">Link</string>
    <string name="item_editor_list_bulleted">Bulleted list</string>
    <string name="item_editor_list_numbered">Numbered list</string>
</resources>