<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Winson Chiu
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/item_search"
        android:title="@string/item_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="100"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"
        />

    <item
        android:id="@+id/item_sort_subreddits"
        android:title="@string/item_sort_subreddits"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="200"
        app:showAsAction="always"
        >

        <menu
            >

            <item
                android:id="@+id/item_sort_alphabetical"
                android:title="@string/item_sort_alphabetical"
                android:orderInCategory="100"
                />

            <item
                android:id="@+id/item_sort_subscribers"
                android:title="@string/item_sort_subscribers"
                android:orderInCategory="200"
                />

        </menu>

    </item>

    <item
        android:id="@+id/item_sort"
        android:title="@string/item_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="300"
        android:enabled="false"
        android:visible="false"
        app:showAsAction="always"
        >

        <menu
            >
            <group
                android:id="@+id/group_subreddit"
                android:checkableBehavior="single"
                >

                <item
                    android:id="@+id/item_sort_relevance"
                    android:title="@string/item_sort_relevance"
                    android:orderInCategory="100"
                    />

                <item
                    android:id="@+id/item_sort_activity"
                    android:title="@string/item_sort_activity"
                    android:orderInCategory="200"
                    />

                <item
                    android:id="@+id/item_sort_hot"
                    android:title="@string/item_sort_hot"
                    android:orderInCategory="300"
                    />

                <item
                    android:id="@+id/item_sort_new"
                    android:title="@string/item_sort_new"
                    android:orderInCategory="400"
                    />

                <item
                    android:id="@+id/item_sort_top"
                    android:title="@string/item_sort_top"
                    android:orderInCategory="500"
                    />

            </group>

            <item
                android:id="@+id/item_sort_time"
                android:title="@string/time"
                android:orderInCategory="600"
                >

                <menu>

                    <group
                        android:checkableBehavior="single"
                        android:orderInCategory="100"
                        >

                        <item
                            android:id="@+id/item_sort_hour"
                            android:title="@string/item_sort_hour"
                            android:orderInCategory="100"
                            />

                        <item
                            android:id="@+id/item_sort_day"
                            android:title="@string/item_sort_day"
                            android:orderInCategory="200"
                            />

                        <item
                            android:id="@+id/item_sort_week"
                            android:title="@string/item_sort_week"
                            android:orderInCategory="300"
                            />

                        <item
                            android:id="@+id/item_sort_month"
                            android:title="@string/item_sort_month"
                            android:orderInCategory="400"
                            />

                        <item
                            android:id="@+id/item_sort_year"
                            android:title="@string/item_sort_year"
                            android:orderInCategory="500"
                            />

                        <item
                            android:id="@+id/item_sort_all"
                            android:title="@string/item_sort_all"
                            android:orderInCategory="600"
                            />

                    </group>
                </menu>

            </item>

        </menu>

    </item>

</menu>