<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/item_upvote"
        android:title="@string/item_upvote"
        android:icon="@drawable/ic_keyboard_arrow_up_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/item_downvote"
        android:title="@string/item_downvote"
        android:icon="@drawable/ic_keyboard_arrow_down_white_24dp"
        android:orderInCategory="200"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/item_web"
        android:title="@string/item_web"
        android:icon="@drawable/ic_open_in_browser_white_24dp"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/item_reply"
        android:title="@string/item_reply"
        android:orderInCategory="400"
        android:icon="@drawable/ic_reply_white_24dp"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/item_view_profile"
        android:title="@string/item_view_profile"
        android:orderInCategory="500"
        android:icon="@drawable/ic_person_white_24dp"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/item_share"
        android:title="@string/item_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="600"
        app:actionProviderClass="com.winsonchiu.reader.CustomShareActionProvider"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/item_download_image"
        android:title="@string/item_download_image"
        android:icon="@drawable/ic_file_download_white_24dp"
        android:orderInCategory="700"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/item_delete"
        android:title="@string/item_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="800"
        app:showAsAction="ifRoom"
        />

</menu>