<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Winson Chiu
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/group_navigation"
        android:checkableBehavior="single"
        >

        <item
            android:id="@+id/item_home"
            android:title="@string/home"
            android:orderInCategory="100"
            android:icon="@drawable/ic_home_white_24dp"
            app:showAsAction="ifRoom"
            />

        <item
            android:id="@+id/item_history"
            android:title="@string/history"
            android:orderInCategory="200"
            android:icon="@drawable/ic_history_white_24dp"
            app:showAsAction="ifRoom"
            />

        <item
            android:id="@+id/item_profile"
            android:title="@string/profile"
            android:orderInCategory="300"
            android:icon="@drawable/ic_person_white_24dp"
            app:showAsAction="ifRoom"
            />

        <item
            android:id="@+id/item_inbox"
            android:title="@string/inbox"
            android:orderInCategory="400"
            android:icon="@drawable/ic_inbox_white_24dp"
            app:showAsAction="ifRoom"
            android:visible="false"
            android:enabled="false"
            />

    </group>

    <group
        android:id="@+id/group_settings"
        >

        <item
            android:id="@+id/item_settings"
            android:title="@string/settings"
            android:orderInCategory="500"
            android:icon="@drawable/ic_settings_white_24dp"
            app:showAsAction="ifRoom"
            />

    </group>

</menu>